a2b: fix german translation 'ab X euro'

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -609,6 +609,9 @@
     "from": {
         "message": "Von"
     },
+    "from_price": {
+      "message": "ab"  
+    },
     "to": {
         "message": "nach"
     },
