--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -617,6 +617,9 @@
     "from": {
         "message": "From"
     },
+    "from_price": {
+      "message": "from"  
+    },
     "to": {
         "message": "to"
     },
