Localization for context menu

--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -622,5 +622,14 @@
     },
     "today": {
         "message": "Today"    
+    },
+    "cMenuOpenInNewTab": {
+      "message": "Open Link in New Tab"  
+    },
+    "cMenuOpenInNewWindow": {
+      "message": "Open Link in New Window"  
+    },
+    "cMenuFeedback": {
+      "message": "Feedback for CLIQZ"  
     }
 }
