--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -614,5 +614,14 @@
     },
     "today": {
         "message": "Heute"    
+    },
+    "cMenuOpenInNewTab": {
+      "message": "Link in neuem Tab öffnen"  
+    },
+    "cMenuOpenInNewWindow": {
+      "message": "Link in neuem Fenster öffnen"  
+    },
+    "cMenuFeedback": {
+      "message": "Feedback an CLIQZ"  
     }
 }
