fix errors reported in graylog change adult filter wording

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -435,7 +435,7 @@
       "message":"blockieren"
     },
     "adultModerate": {
-      "message":"filtern"
+      "message":"nachfragen"
     },
     "adultLiberal": {
       "message":"immer anzeigen"
