--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -435,7 +435,7 @@
       "message":"block"
     },
     "adultModerate": {
-      "message":"filter"
+      "message":"ask"
     },
     "adultLiberal": {
       "message":"always show"
