Open link in private window

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -621,6 +621,9 @@
     "cMenuOpenInNewWindow": {
       "message": "Link in neuem Fenster öffnen"  
     },
+    "cMenuOpenInPrivateWindow": {
+      "message": "Link in neuem privaten Fenster öffnen"   
+    },
     "cMenuFeedback": {
       "message": "Feedback an CLIQZ"  
     }
