--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -629,6 +629,9 @@
     "cMenuOpenInNewWindow": {
       "message": "Open Link in New Window"  
     },
+    "cMenuOpenInPrivateWindow": {
+      "message": "Open Link in New Private Window"   
+    },
     "cMenuFeedback": {
       "message": "Feedback for CLIQZ"  
     }
