--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -144,7 +144,7 @@
         "message":"vor {} Jahren"
     },
     "onCalloutGoogle":{
-        "message":"Entschuldige die Unterbrechung... aber zum selben Ergebnis kommst Du hier noch schneller."
+        "message":"Entschuldige die Unterbrechung, aber das Ergebnis hättest du hier schneller haben können. Spar Dir Zeit nächstes Mal!"
     },
     "onCalloutGoogleBtnOk":{
         "message":"Alles klar!"
