change locale de: Bewertungen for reviews

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -6,7 +6,7 @@
         "message": "Zutaten"
     },
     "Reviews":{
-        "message": "Stimmen"
+        "message": "Bewertungen"
     },
     "Serves":{
         "message": "Portionen"
