fix localisation for Ramadan

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -3,10 +3,10 @@
         "message": "Türkischer Kalender"
     },
     "MWL":{
-        "message": "MWL"
+        "message": "Islamishe Weltliga"
     },
     "TillEndRamadan":{
-        "message": "Noch {} Tage bis zum 17. September"
+        "message": "Noch {} Tage bis zum 17. September (Küçük Bayram)"
     },
     "RamadanDes":{
         "message": "Der Ramadan ist der Fastenmonat der Muslime und der neunte Monat des islamischen Mondkalenders."
