fix ramadan end date

--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -6,7 +6,7 @@
         "message": "Muslim World League"
     },
     "TillEndRamadan":{
-        "message": "{} days til 17. September (Küçük Bayram)"
+        "message": "{} days til Küçük Bayram"
     },
     "RamadanDes":{
         "message": "Ramadan is the ninth month of the Islamic calendar, and is observed by Muslims worldwide as a month of fasting to commemorate the first revelation of the Quran to Muhammad according to Islamic belief"
@@ -639,7 +639,7 @@
         "message": "From"
     },
     "from_price": {
-      "message": "from"  
+      "message": "from"
     },
     "to": {
         "message": "to"
