--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -627,7 +627,7 @@
         "message": "From"
     },
     "from_price": {
-      "message": "from"  
+      "message": "from"
     },
     "to": {
         "message": "to"
@@ -643,5 +643,78 @@
     },
     "dismiss": {
         "message": "Dismiss"
+    },
+    "cqz_watch_trailer": {
+      "message": "Watch Trailer"
+    },
+    "Monday": {
+      "message": "Monday"
+    },
+    "Tuesday": {
+      "message": "Tuesday"
+    },
+    "Wednesday": {
+      "message": "Wednesday"
+    },
+    "Thursday": {
+      "message": "Thursday"
+    },
+    "Friday": {
+      "message": "Friday"
+    },
+    "Saturday": {
+      "message": "Saturday"
+    },
+    "Sunday": {
+      "message": "Sunday"
+    },
+    "January": {
+      "message": "January"
+    },
+    "February": {
+      "message": "February"
+    },
+    "March": {
+      "message": "March"
+    },
+    "April": {
+      "message": "April"
+    },
+    "May": {
+      "message": "May"
+    },
+    "June": {
+      "message": "June"
+    },
+    "July": {
+      "message": "July"
+    },
+    "August": {
+      "message": "August"
+    },
+    "September": {
+      "message": "September"
+    },
+    "October": {
+      "message": "October"
+    },
+    "November": {
+      "message": "November"
+    },
+    "December": {
+      "message": "December"
+    },
+    "location_permission_prompt": {
+      "message": "We'd love to enhance this result with some local info. Share your location with us?"
+    },
+    "location_just_once": {
+      "message": "Just this once..."
+    },
+    "location_never": {
+      "message": "Never. I hate awesome stuff."
+    },
+    "no_cinemas_to_show": {
+      "message": "It seems like this movie is not currently playing in your area."
     }
+
 }
