fix localisation for Ramadan

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -6,7 +6,7 @@
         "message": "Islamishe Weltliga"
     },
     "TillEndRamadan":{
-        "message": "Noch {} Tage bis zum 17. Juli (Küçük Bayram)"
+        "message": "Noch {} Tage bis zum Küçük Bayram"
     },
     "RamadanDes":{
         "message": "Der Ramadan ist der Fastenmonat der Muslime und der neunte Monat des islamischen Mondkalenders."
