UI for movie rich data

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -1,6 +1,24 @@
 {
+    "from_lcase":{
+        "message": "von"
+    },
+    "Cast":{
+        "message": "Besetzung"
+    },
+    "Movie_Length":{
+        "message": "{} Minuten"
+    },
+    "Creator":{
+        "message": "Regie"
+    },
+    "Director":{
+        "message": "Regisseur[in]"
+    },
     "Review":{
         "message": "Tests"
+    },
+    "Reviews":{
+        "message": "Kritik"
     },
     "Tips":{
         "message": "Tipps"
@@ -32,14 +50,14 @@
     "Ingredients":{
         "message": "Zutaten"
     },
-    "Reviews":{
+    "Votes":{
         "message": "Bewertungen"
     },
     "Serves":{
         "message": "Portionen"
     },
     "CookTime":{
-        "message": "Gesamtzeit: {} Minute"
+        "message": "Gesamtzeit: {} Minuten"
     },
     "KickerSponsor":{
         "message": "powered by kicker online"
