added messages and styles for SmartCliqz extended onboarding

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -197,6 +197,15 @@
     "onCalloutSameResultBtnCancel":{
         "message":"Nicht mehr zeigen."
     },
+    "onCalloutSmartCliqz":{
+        "message":"Entschuldige die Unterbrechung, aber das Ergebnis hättest du hier schneller haben können. Spar Dir Zeit nächstes Mal!"
+    },
+    "onCalloutSmartCliqzBtnOk":{
+        "message":"Alles klar!"
+    },
+    "onCalloutSmartCliqzBtnCancel":{
+        "message":"Nicht mehr zeigen."
+    },
     "onCalloutTypedUrl":{
         "message":"Entschuldige die Unterbrechung, aber Du musst die Adresse nicht immer komplett eintippen. Drücke einfach auf ENTER, sobald die Adresse erscheint!"
     },
