DD-2 Weather SmartCliqz adding extended forecast button

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -698,5 +698,8 @@
     },
     "dismiss": {
         "message": "Nachricht schließen"
+    },
+    "extended_forecast": {
+        "message": "Detailiertere Vorhersage"
     }
 }
