--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -706,5 +706,8 @@
     },
     "dismiss": {
         "message": "Dismiss"
+    },
+    "extended_forecast": {
+        "message": "Extended Forecast"
     }
 }
