--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -60,10 +60,16 @@
         "message": "Total time: {} minutes"
     },
     "KickerSponsor":{
-        "message": "powered by kicker online"
+        "message": "powered by Kicker"
     },
     "vs":{
         "message": "vs."
+    },
+    "NEXT GAME" : {
+        "message": "NEXT GAME"
+    },
+    "LAST GAME" : {
+        "message": "LAST GAME"
     },
     "AllGames":{
         "message": "All Games"
