--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -793,7 +793,7 @@
       "message": "Nein, ich mag coole Sachen nicht."
     },
     "no_local_data_msg": {
-      "message": "Leider spielt der Film in keinem Kino in Deiner Nähe"
+      "message": "Tut uns leid, aber für dieses Ergebnis haben wir leider keine örtlichen Informationen in Deiner Nähe."
     },
     "movies_confirm_no": {
       "message": "Sicher, dass Du nicht sehen möchtest in welchen Kinos der Film gerade läuft?"
