--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -788,8 +788,8 @@
     "location_never": {
       "message": "Never. I hate awesome stuff."
     },
-    "no_cinemas_to_show": {
-      "message": "It seems like this movie is not currently playing in your area."
+    "no_local_data_msg": {
+      "message": "Sorry. It seems like we have no local details for this result around your area."
     },
     "movies_confirm_no": {
       "message": "Are you sure you don't want to see in which cinemas this movie is playing?"
