finalise UI Soccer-Generic EZ

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -60,7 +60,7 @@
         "message": "Gesamtzeit: {} Minuten"
     },
     "KickerSponsor":{
-        "message": "powered by Kicker"
+        "message": "powered by kicker online"
     },
     "vs":{
         "message": "gegen"
