--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -60,7 +60,7 @@
         "message": "Total time: {} minutes"
     },
     "KickerSponsor":{
-        "message": "powered by Kicker"
+        "message": "powered by kicker online"
     },
     "vs":{
         "message": "vs."
