DD-16 Footer Messages Design and functionality change (+1 squashed commit) Squashed commits: [17eb0d6] DD-16 general stylings

--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -498,10 +498,7 @@
       "message":"My Top Hits"
     },
     "adultInfo": {
-        "message": "Explicit content has been hidden."
-    },
-    "adultAction": {
-        "message": "Show unfiltered results?"
+        "message": "Explicit content has been hidden. Show unfiltered results?"
     },
     "adultConservative": {
       "message":"block"
