--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -498,10 +498,7 @@
       "message":"Besuchte Seiten"
     },
     "adultInfo": {
-        "message": "Anstößige Inhalte wurden automatisch blockiert."
-    },
-    "adultAction": {
-        "message": "Alle Ergebnisse anzeigen?"
+        "message": "Anstößige Inhalte wurden automatisch blockiert. Alle Ergebnisse anzeigen?"
     },
     "adultConservative": {
       "message":"blockieren"
