DD-16 Adult Filter - Button ASK removed Show Once is added

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -515,6 +515,9 @@
     "adultLiberal": {
       "message":"immer anzeigen"
     },
+    "adult_show_once": {
+      "message":"Einmal anzeigen"
+    },
     "yes": {
         "message": "Ja"
     },
