--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -515,6 +515,9 @@
     "adultLiberal": {
       "message":"always show"
     },
+    "adult_show_once": {
+      "message":"Show Once"
+    },
     "yes": {
         "message": "Yes"
     },
