--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -817,6 +817,12 @@
     },
     "extended_forecast": {
         "message": "Extended Forecast"
+    },
+    "cinema_program_btn": {
+        "message": "Cinema Program"
+    },
+    "now_playing_in_cinema": {
+        "message": "Now Playing"
     }
 
 }
