--- a/generic/static/locale/de/cliqz.json
+++ b/generic/static/locale/de/cliqz.json
@@ -735,7 +735,7 @@
         "message": "Nachricht schließen"
     },
     "cqz_watch_trailer": {
-      "message": "Trailer Abspielen"
+      "message": "Trailer abspielen"
     },
     "Monday": {
       "message": "Montag"
