--- a/generic/static/locale/en/cliqz.json
+++ b/generic/static/locale/en/cliqz.json
@@ -735,7 +735,7 @@
         "message": "Dismiss"
     },
     "cqz_watch_trailer": {
-      "message": "Watch Trailer"
+      "message": "Watch trailer"
     },
     "Monday": {
       "message": "Monday"
