--- a/generic/static/locale/de/cliqz.json
+++ b/generic/static/locale/de/cliqz.json
@@ -788,6 +788,15 @@
     "no_local_data_msg": {
       "message": "Tut uns leid, aber für dieses Ergebnis haben wir leider keine örtlichen Informationen in Deiner Nähe."
     },
+    "location_sorry_msg": {
+      "message": "Oh nein, leider ist etwas schief gegangen. Passiert nicht noch einmal!"
+    },
+    "location_thank_you_msg": {
+      "message": "Vielen Dank!"
+    },
+    "location_not_share_msg": {
+      "message": "Voll blöd, Du verpasst etwas. Solltest Du Deine Meinung noch ändern, dann kannst Du Deine Einstellungen jederzeit im Cliqz Menü ändern"
+    },
     "movies_confirm_no": {
       "message": "Sicher, dass Du nicht sehen möchtest in welchen Kinos der Film gerade läuft?"
     },
