View Layer v1.0: Support for the Movies & Cinema SmartCliqz

--- a/generic/static/locale/en/cliqz.json
+++ b/generic/static/locale/en/cliqz.json
@@ -801,7 +801,7 @@
       "message": "Never. I hate awesome stuff."
     },
     "no_local_data_msg": {
-      "message": "Oh no, something went wrong. Always share you location with us to avoid this in future?"
+      "message": "Oh no, something went wrong. Always share your location with us to avoid this in the future?"
     },
     "location_sorry_msg": {
       "message": "Oh no, something went wrong. Shouldn't happen again!"
